--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -2,7 +2,9 @@ compile.on.save=true
 do.depend=false
 do.jar=true
 do.jlink=false
+file.reference.h2-1.4.200.jar=C:\\Program Files (x86)\\H2\\bin\\h2-1.4.200.jar
+file.reference.jaco-mp3-player-0.9.3.jar=D:\\HealthAid
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
-user.properties.file=/Users/gygshwr/Library/Application Support/NetBeans/12.0/build.properties
+user.properties.file=C:\\Users\\gygsh\\AppData\\Roaming\\NetBeans\\12.1\\build.properties
