--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,11 +36,15 @@ dist.jlink.output=${dist.jlink.dir}/HealthAid
 endorsed.classpath=
 excludes=
 file.reference.h2-1.4.200.jar=../../h2-1.4.200.jar
+file.reference.h2-1.4.200.jar-1=C:\\Program Files (x86)\\H2\\bin\\h2-1.4.200.jar
 file.reference.jaco-mp3-player-0.9.3.jar=../../jaco-mp3-player-0.9.3.jar
+file.reference.jaco-mp3-player-0.9.3.jar-1=jaco-mp3-player-0.9.3.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.jaco-mp3-player-0.9.3.jar}
+    ${file.reference.jaco-mp3-player-0.9.3.jar}:\
+    ${file.reference.jaco-mp3-player-0.9.3.jar-1}:\
+    ${file.reference.h2-1.4.200.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
