--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,8 +35,8 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/HealthAid
 endorsed.classpath=
 excludes=
-file.reference.h2-1.4.200.jar=../../h2-1.4.200.jar
-file.reference.jaco-mp3-player-0.9.3.jar=../../jaco-mp3-player-0.9.3.jar
+file.reference.h2-1.4.200.jar=C:\\Program Files (x86)\\H2\\bin\\h2-1.4.200.jar
+file.reference.jaco-mp3-player-0.9.3.jar=jaco-mp3-player-0.9.3.jar
 includes=**
 jar.compress=false
 javac.classpath=\
